implement flexible js-version for tinymce6