@@ -4,8 +4,6 @@ import java.util.List;
 
 import org.xwiki.component.annotation.Component;
 
-import com.google.common.collect.ImmutableList;
-
 @Component(RteTinyMce3.NAME)
 public class RteTinyMce3 implements RteImplementation {
 
@@ -18,7 +16,7 @@ public class RteTinyMce3 implements RteImplementation {
 
   @Override
   public List<String> getJavaScriptFiles() {
-    return ImmutableList.of(
+    return List.of(
         ":celRTE/tiny_mce_src.js",
         ":celJS/celTabMenu/loadTinyMCE-async.js");
   }
